syntax = "proto3";
package gink;

message Header {
    uint64 timestamp = 1;
    uint64 medallion = 2;
    uint64 previous = 3;
    string comment = 4;
    uint64 chain_start = 5;
}
