syntax = "proto3";
package gink;

message KeyPair {
    bytes public_key = 1;
    bytes secret_key = 2;
}
